# quizkit-dev

./: .gitignore  index.html  package-lock.json  package.json  templates.json  vite.config.ts
.cargo/: config.toml
assets/: index-BAYDkKna.css  index-rFHLRdV1.js
docs/: index.html
docs/quizzes/: baptism-day.json  constitution-day.json  defender-day.json  grandpa-frost-birthday.json  heroes-day.json  index.html  knowledge-day.json  mothers-day.json  new-year.json  student-day.json  teachers-day.json  unity-day.json  victory-day.json  womens-day.json
landing/: index.html
player/: index.html  jeopardy.html
portable/: index.html  server.ps1  start.bat
portable/quizzes/: baptism-day.json  family-day.json  index.html  mothers-day.json
public/: templates.json
quizzes/: animals.json  baptism-day.json  constitution-day.json  cosmonautics-day.json  dinosaurs.json  ecology.json  elderly-day.json  family-day.json  fathers-day.json  flag-day.json  geography-world.json  geography.json  grandpa-frost-birthday.json  heroes-day.json  index.html  knowledge-day.json  labor-day.json  mountains.json  new-year.json  oceans.json  plants.json  russia-day.json  science-general.json  space.json  teachers-day.json  unity-day.json  valentines-day.json  water.json  weather.json
scripts/: generate-jeopardy.cjs  generate-school-templates.cjs  generate-templates.cjs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: embedded.rs  game.rs  lib.rs  main.rs  server.rs  storage.rs
(+24 files in other folders)
