[package]
name = "ilya-klass"
version = "0.6.8"
description = "ИльЯкласс — проверочные работы"
authors = ["ИльЯкласс"]
edition = "2021"

[lib]
name = "ilya_klass_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
local-ip-address = "0.6"
rand = "0.8"
